feature: REST implementation